# nepo

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py  test_requirements.txt
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  oseses.yml
src/: cli.py  command_manager.py  core.py  groups.py  manifest.py
tests/: test_cli.py  test_core.py
